# soroban-debugger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BATCH_EXECUTION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  Dockerfile  Makefile  README.md  Readme.md  build.rs  check_err.txt  ci.sh  docker-compose.yml  example_scenario.toml  host_methods.txt  issue157.txt  run_local_ci.sh  test_output.txt  test_snapshot.rs
.github/workflows/: ci.yml  release.yml
benches/: argument_parsing.rs  contract_execution.rs  debugger_bench.rs  state_management.rs  storage_ops.rs  wasm_loading.rs
crates/soroban-debug-mock/: Cargo.toml
crates/soroban-debug-mock/src/: assertions.rs  builder.rs  lib.rs  mock.rs  storage.rs
docs/: architecture-plugins.md  architecture-remote.md  basic_scenario.rs  batch-execution.md  contributor-command-map.md  dependency-graph.md  faq.md  feature-matrix.md  getting-started.md  inspect-command.md  instruction-stepping.md  keybindings.md  mock-helpers.md  optimization-guide.md  plugin-api.md  plugin-dependencies.md  plugin-reload-status.md  release-checklist.md  remote-debugging.md  remote-troubleshooting.md  replay-artifacts.md  source-level-debugging.md  source-map-health.md  storage-artifact-format.md  storage-snapshot.md  tui-command-palette.md  watch-mode.md
docs/doc/: compare.md
docs/tutorials/: debug-auth-errors.md  first-debug.md  scenario-runner.md  understanding-budget.md
examples/: batch_args.json  batch_args_example.json  keybindings.toml  snapshot.json  storage_seed_normalized.json  storage_state.json  test_unbounded_iteration.rs  trace_a.json  trace_b.json
examples/mock-usage/: Cargo.toml
examples/sample_contract/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arg_parser.rs  storage_keys.rs  wasm_loading.rs
scripts/: check_benchmark_regressions.sh  test_benchmark_regressions.sh
src/: batch.rs  benchmarks.rs  config.rs  lib.rs  logging.rs  main.rs  output.rs  protocol.rs  repeat.rs  scenario.rs
src/analyzer/: graph.rs  (+4 more)
test_snapshots/: test_fixture_registration_and_invocation.1.json  test_remote_debug_flow.1.json
tests/: arithmetic_rule.rs  auth_tests.rs  basic_tests.rs  batch_tests.rs  breakpoint_condition_test.rs  budget_trend_tests.rs  cli_integration.rs  command_feature_tests.rs  dry_run_tests.rs  fixture_tests.rs  heartbeat_tests.rs  instruction_stepping_tests.rs  integration.rs  json_output.rs  parity_tests.rs  plugin_tests.rs  property.rs  remote_run_tests.rs  replay_tests.rs  security_import_name_tests.rs  source_breakpoint_resolution_tests.rs  source_map_test.rs  source_step_over_tests.rs  symbolic_dedup_integration_tests.rs  symbolic_import_offset_tests.rs  symbolic_input_tests.rs  timeline_test.rs  unbounded_iteration_tests.rs  vec_parsing_test.rs  verbosity_tests.rs  watch_mode_tests.rs
tests/fixtures/contracts/: Cargo.toml
tests/fixtures/contracts/always_panic/: Cargo.toml
tests/fixtures/contracts/always_panic/src/: lib.rs  test.rs
tests/fixtures/contracts/budget_heavy/: Cargo.toml
tests/fixtures/contracts/budget_heavy/src/: lib.rs  test.rs
tests/fixtures/contracts/counter/: Cargo.toml
tests/fixtures/contracts/counter/src/: lib.rs  test.rs
tests/fixtures/contracts/cross_contract/: Cargo.toml
tests/fixtures/contracts/cross_contract/src/: lib.rs  test.rs
tests/fixtures/contracts/echo/: Cargo.toml
tests/fixtures/contracts/echo/src/: lib.rs  test.rs
(+205 files in other folders)
