[package]
name = "soroban-debugger"
version = "0.1.0"
edition = "2021"
authors = ["Soroban Debugger Contributors"]
description = "A debugging tool for Soroban smart contracts"
repository = "https://github.com/Timi16/soroban-debugger"
license = "MIT OR Apache-2.0"
keywords = ["stellar", "soroban", "debugger", "blockchain", "smart-contracts"]
categories = ["development-tools::debugging", "command-line-utilities"]

[dependencies]
# Soroban SDK and runtime
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
soroban-env-host = { version = "22.0.0", features = ["testutils"] }
soroban-env-common = "22.0.0"

# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo", "string"] }
clap_complete = "4.5"

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# WASM parsing
wasmparser = "0.121"
walrus = "0.20"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities
itertools = "0.12"
regex = "1.10"
toml = "0.8"
textplots = "0.8"
chrono = "0.4"
rayon = "1.10"
colored = "2.0"
stellar-xdr = { version = "22.1.0", features = ["curr"] }
hex = "0.4.3"
base64 = "0.21.7"
sha2 = "0.10.9"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "string"] }
clap_mangen = "0.2"
clap_complete = "4.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
proptest = "1.0"
criterion = "0.5"

[[bench]]
name = "debugger_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "soroban-debug"
path = "src/main.rs"

[lib]
name = "soroban_debugger"
path = "src/lib.rs"
