[package]
name = "soroban-debug-mock"
version = "0.1.0"
edition = "2021"
description = "Test helper for Soroban contract development"
license = "MIT OR Apache-2.0"

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
